syntax="proto3";

option go_package = "./proto";

package greet_service;

service GreetService {
    rpc SayHello(NoParam) returns (HelloResponse);

    rpc SayHelloServerStream(ListofNames) returns (stream HelloResponse); //server-side streaming

    rpc SayHelloClientStream(stream HelloRequest) returns (MessageResponse); //client-side streaming

    rpc SayHelloBiDiStream(stream HelloRequest) returns (stream HelloResponse);//bidirectional streaming

}

message NoParam {};

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

message ListofNames {
    repeated string names = 1;
}

message MessageResponse {
    repeated string messages = 1;
}

